# gridcore

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
proc_macro/: Cargo.toml
src/: auth.rs  checksum.rs  config.rs  constants.rs  decompress.rs  download.rs  error_handling.rs  file_system.rs  grid_logger.rs  http.rs  https.rs  json.rs  launch.rs  lib.rs  managers.rs  mc_version.rs  path.rs  toml.rs  utils.rs
src/auth/: microsoft_oauth2.rs  mod.rs
src/download/: game.rs  mc_dl_addr.rs  mod.rs  mods.rs
src/download/game/: mc_file.rs  version_manifest.rs
src/download/game/mc_file/: assets.rs  jar.rs  libraries.rs  logging_config.rs
src/managers/: manifest.rs  version.rs
src/managers/game/: download.rs  launch.rs
src/managers/game/download/: mc_file.rs  version_manifest.rs
src/managers/game/download/mc_file/: assets.rs  jar.rs  libraries.rs  logging_config.rs
src/utils/: decompresser.rs  downloader.rs  json_processer.rs  sha1_checker.rs
tests/: auth_test.rs  mc_download.rs  mc_download_test.rs  sha1_test.rs
