[package]
name = "gridcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha1 = "0.10.6"
tokio = { version = "1.41.1", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "signal",
] }
zip = "2.2.0"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
