[package]
name = "gridcore"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha1 = "0.10.6"
tokio = { version = "1.43.0", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "signal",
] }
toml = "0.8.20"
zip = "2.2.3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
