[package]
name = "gridcore"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tokio = { version = "1", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "signal",
] }
toml = "0.8"
zip = "3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
